# playground

./: .gitignore  .pre-commit-config.yaml  Justfile  app.py  cli.py  controller.py  memo.json  pyproject.toml  questions.json  service.py
src/: app.py  cli.py  controller.py  database.py
src/ai_scheduler/: controller.py  service.py
src/common/repository/: base.py
src/english_writing/: controller.py  models.py  repository.py  service.py
src/k8s_command_runner/: controller.py  service.py
src/micro_journal/: controller.py  service.py
src/node_note/: controller.py  service.py
src/pages/: 1_AI_English_Writing.py  2_Get_Information.py  2_Micro_Journal.py  3_AI_Scheduler.py  3_Wordive.py  4_Node_Note.py  5_K8s_Command_Runner.py  6_Why_Board.py  7_Wordive.py
src/why_board/: controller.py  models.py  repository.py  service.py
src/wordive/: ai_helper.py  controller.py  models.py  repository.py  service.py
storage/: memo.json
